# companion9x

./: IssueReporting.md  LinuxBuild.md  MacBuild.md  MacInstall.md  NewMacBuild.md  ProjectHome.md  Screenshots.md  TodoList.md  WindowsVisualStudioBuild.md  companion9x-macosx.stamp  companion9x.stamp  doshere.reg  er9x.patch  th9x.patch
branches/arm/: companion9x-macosx.stamp  companion9x.stamp
branches/arm/src/: CMakeLists.txt  avroutputdialog.h  burnconfigdialog.ui  burndialog.cpp  burndialog.ui  companion9x.qrc  companion9x_fr.ts  companion9x_pt.ts  companion9x_ru.ts  comparedialog.cpp  comparedialog.h  contributorsdialog.cpp  contributorsdialog.ui  customizesplashdialog.cpp  customizesplashdialog.ui  eeprominterface.cpp  eeprominterface.h  er9xeeprom.cpp  er9ximport.cpp  er9xinterface.cpp  er9xsimulator.cpp  ersky9xeeprom.cpp  ersky9xeeprom.h  ersky9xinterface.cpp  ersky9xinterface.h  ersky9xsimulator.cpp  expodialog.h  file.cpp  flashinterface.cpp  gruvin9xeeprom.h  gruvin9xinterface.cpp  gruvin9xinterface.h  gruvin9xsimulator.h  gruvin9xstableimport.cpp  gruvin9xstableinterface.cpp  gruvin9xstablesimulator.cpp  gruvin9xv4simulator.cpp  helpers.cpp  hexinterface.cpp  joystickdialog.cpp  (+35 more)
branches/arm/winbuild/: companion9x-msys.nsi.in  license.txt  winbuild.h
branches/lua/: companion9x.stamp
branches/lua/src/: avroutputdialog.cpp  companion9x_cs.ts  companion9x_fr.ts  companion9x_he.ts  companion9x_it.ts  companion9x_pt.ts  companion9x_ru.ts  companion9x_sv.ts  comparedialog.cpp  contributors  eeprominterface.cpp  eeprominterface.h  ersky9xsimulator.cpp  generaledit.cpp  generaledit.h  generaledit.ui  helpers.h  logsdialog.cpp  logsdialog.ui  mdichild.h  mixerdialog.cpp  modeledit.h  open9xSky9xsimulator.cpp  open9xeeprom.cpp  open9xeeprom.h  open9xinterface.cpp  open9xinterface.h  preferencesdialog.ui  printdialog.h  simulatordialog.cpp  th9xsimulator.cpp  warnings.h  xsimulatordialog.ui
src/: CMakeLists.txt  avroutputdialog.cpp  avroutputdialog.h  avroutputdialog.ui  burnconfigdialog.cpp  burnconfigdialog.h  burnconfigdialog.ui  burndialog.cpp  burndialog.h  burndialog.ui  coders  companion9x.nsi  companion9x.qrc  companion9x_cs.ts  companion9x_de.ts  companion9x_es.ts  companion9x_fr.ts  companion9x_he.ts  companion9x_it.ts  companion9x_pl.ts  companion9x_pt.ts  companion9x_ru.ts  companion9x_sv.ts  comparedialog.cpp  comparedialog.h  contributors  contributorsdialog.cpp  contributorsdialog.h  contributorsdialog.ui  cursorwidget.h  customizesplashdialog.cpp  customizesplashdialog.h  customizesplashdialog.ui  donatorsdialog.ui  edge.cpp  eepromimportexport.h  eeprominterface.cpp  eeprominterface.h  er9xeeprom.cpp  er9xeeprom.h  (+135 more)
src/cmake/: FindSdl.cmake  FindXercesC.cmake  FindXsd.cmake  GetRevision.cmake
trunk/: companion9x-macosx.stamp  companion9x.stamp  er9x.patch  th9x.patch
trunk/src/: CMakeLists.txt  armapplet.h  arminterface.cpp  arminterface.h  avroutputdialog.cpp  avroutputdialog.h  burnconfigdialog.cpp  burnconfigdialog.h  burnconfigdialog.ui  burndialog.cpp  burndialog.h  burndialog.ui  coders  companion9x.nsi  companion9x.qrc  companion9x_cs.ts  companion9x_de.ts  companion9x_es.ts  companion9x_fr.ts  companion9x_he.ts  companion9x_it.ts  companion9x_pl.ts  companion9x_pt.ts  companion9x_ru.ts  companion9x_sv.ts  comparedialog.cpp  comparedialog.h  contributors  contributorsdialog.cpp  contributorsdialog.h  contributorsdialog.ui  cursorwidget.h  customizesplashdialog.cpp  customizesplashdialog.h  customizesplashdialog.ui  donators  downloaddialog.cpp  edge.cpp  eepromimportexport.h  eeprominterface.cpp  (+140 more)
trunk/src/cmake/: FindXercesC.cmake
trunk/winbuild/: avrdude.conf  companion9x-vs.nsi.in  companion9x.nsi  companion9x.nsi.in  license.txt  winbuild.h
wiki/: IssueReporting.wiki  LinuxBuild.wiki  MacBuild.wiki  MacInstall.wiki  Macdmg.wiki  NewMacBuild.wiki  Screenshots.wiki  TodoList.wiki  WindowsMingwBuild.wiki  WindowsVisualStudioBuild.wiki
winbuild/: companion9x-msys.nsi.in  companion9x-vs.nsi.in  companion9x.nsi.in  license.txt  winbuild.h
